[gd_scene load_steps=55 format=3 uid="uid://bx2clnv5ucxob"]

[ext_resource type="Script" uid="uid://5v3hb3yel8qm" path="res://scripts/hatchback.gd" id="1_2lolp"]
[ext_resource type="Script" uid="uid://b10r8pqeduy40" path="res://scripts/HatchbackMovement.gd" id="2_2lolp"]
[ext_resource type="Texture2D" uid="uid://bgd0u70bxxme3" path="res://assets/Cars/Black_HatchBack_CLEAN_All_000-sheet.png" id="3_d46mv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jng34"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4myc"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kw2f"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu5et"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfuun"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c30dv"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8d1w"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xv2x"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsngy"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd54o"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8ks2"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctld2"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pklc"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbgaj"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ss45"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sias"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4e27"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncl71"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwlad"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ois"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2onpx"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rma3a"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmrhu"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7s6o"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3xqc"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kspn2"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mekw8"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqrjt"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pgmo"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj3cx"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_538mq"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohign"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_feggq"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y55u"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvepd"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f6t3"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_desp6"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_02n25"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_88eje"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dro0"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8prs"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axlcf"]
atlas = ExtResource("3_d46mv")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h8bn"]
atlas = ExtResource("3_d46mv")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhx72"]
atlas = ExtResource("3_d46mv")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbmek"]
atlas = ExtResource("3_d46mv")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4wi8"]
atlas = ExtResource("3_d46mv")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewpdl"]
atlas = ExtResource("3_d46mv")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_67wuh"]
atlas = ExtResource("3_d46mv")
region = Rect2(400, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_olpj1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jng34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4myc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu5et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfuun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c30dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8d1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xv2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsngy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd54o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8ks2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctld2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pklc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbgaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ss45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4e27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncl71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwlad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ois")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2onpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rma3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmrhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7s6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3xqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kspn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mekw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqrjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pgmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj3cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_538mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohign")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feggq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y55u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvepd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f6t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_desp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02n25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88eje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dro0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8prs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axlcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h8bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhx72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbmek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4wi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewpdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67wuh")
}],
"loop": true,
"name": &"drive",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jng34"]
size = Vector2(61, 114)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4myc"]
radius = 41.0
height = 144.0

[node name="Hatchback" type="Node2D"]
script = ExtResource("1_2lolp")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["voitures"]]
script = ExtResource("2_2lolp")

[node name="RepairButton" type="Button" parent="CharacterBody2D"]
visible = false
offset_left = 26.0
offset_top = 162.0
offset_right = 145.0
offset_bottom = 195.0
text = "RÃ©parer"

[node name="Label" type="Label" parent="CharacterBody2D"]
offset_left = 29.499939
offset_top = 17.49997
offset_right = 69.49994
offset_bottom = 40.49997
metadata/_edit_use_anchors_ = true

[node name="LabelStatut" type="Label" parent="CharacterBody2D"]
offset_left = 65.49994
offset_top = 9.4999695
offset_right = 110.49994
offset_bottom = 32.49997

[node name="LabelResumeut2" type="Label" parent="CharacterBody2D"]
offset_left = 65.49994
offset_top = 9.4999695
offset_right = 110.49994
offset_bottom = 32.49997

[node name="ProgressBar" type="ProgressBar" parent="CharacterBody2D"]
visible = false
offset_left = 698.0
offset_top = 227.0
offset_right = 838.0
offset_bottom = 254.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(87.5, 81.5)
scale = Vector2(1.69, 1.69)
sprite_frames = SubResource("SpriteFrames_olpj1")
animation = &"drive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(83.99994, 84)
shape = SubResource("RectangleShape2D_jng34")

[node name="InteractionZone" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/InteractionZone"]
position = Vector2(84.49994, 84)
shape = SubResource("CapsuleShape2D_u4myc")

[node name="FinishButton" type="Button" parent="."]
visible = false
offset_left = 176.0
offset_top = 267.0
offset_right = 273.0
offset_bottom = 275.0
text = "Finir"
