extends Node2D

# ===============================
# N≈ìuds enfants
# ===============================
@onready var label_statut: Label = $CharacterBody2D/LabelStatut
@onready var label_resume: Label = $CharacterBody2D/LabelResume
@onready var label: Label = $CharacterBody2D/Label
var is_in_finish_zone: bool = false
@onready var repair_button: Button = $CharacterBody2D/RepairButton
@onready var progress_bar: ProgressBar = $CharacterBody2D/ProgressBar
@onready var finish_button: Button = $CharacterBody2D/FinishButton

@onready var sprite: AnimatedSprite2D = $CharacterBody2D/AnimatedSprite2D

# Variables
var voiture_data: Dictionary = {}
var pending_pannes: Array[Dictionary] = []
var total_duree_restante: float = 0.0
var total_prix: int = 0
# Variables pour la validation
var validation_en_cours: bool = false
var requetes_validation_en_cours: Array = []
var current_repair_index: int = -1
var current_repair_time: float = 0.0
var repair_duration: float = 0.0
var is_repairing: bool = false

var has_reparable_panne: bool = false
var pannes_repar√©es: Array[Dictionary] = []
var panne_deja_payee: bool = false

# ===============================
# Initialisation
# ===============================
func _ready() -> void:
	add_to_group("voiture_principale")
	if repair_button:
		repair_button.visible = false
		repair_button.text = "R√©parer"
		repair_button.connect("pressed", _on_repair_button_pressed)
	if finish_button:
		finish_button.visible = false
		finish_button.text = "Finir"
		finish_button.connect("pressed", _on_finish_button_pressed)
	if progress_bar:
		progress_bar.visible = false
		progress_bar.min_value = 0
		progress_bar.max_value = 100
		progress_bar.value = 0
	
	if sprite:
		sprite.modulate = Color.WHITE

func setup(data: Dictionary) -> void:
	voiture_data = data.duplicate(true)
	
	var matricule = str(data.get("matricule", "")).strip_edges()
	if label:
		label.text = "%s" % [matricule]
	
	charger_pannes()

# ===============================
# Chargement des pannes
# ===============================
func charger_pannes() -> void:
	var id_voiture = str(voiture_data.get("id", "")).strip_edges()
	if id_voiture.is_empty():
		_set_statut("‚ùì ID manquant", Color.YELLOW)
		return
	
	var url = "https://garage-api-2-t50x.onrender.com/voitures/" + id_voiture + "/pannes"
	var headers = PackedStringArray([
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	print("Chargement pannes pour voiture ID:", id_voiture)
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(_on_pannes_reponse.bind(id_voiture))
	
	var err = http.request(url, headers, HTTPClient.METHOD_GET)
	if err != OK:
		_set_statut("‚ö†Ô∏è Erreur r√©seau", Color.ORANGE)
		http.queue_free()

func _on_pannes_reponse(_result, code: int, _headers, body: PackedByteArray, id_voiture: String):
	if get_node_or_null("HTTPRequest"):
		get_node_or_null("HTTPRequest").queue_free()
	
	print("=== R√âPONSE PANNES ===")
	print("Code:", code)
	
	if code != 200:
		print("HTTP pannes erreur:", code)
		_set_statut("‚ö†Ô∏è Erreur API " + str(code), Color.ORANGE)
		return
	
	var json = JSON.new()
	if json.parse(body.get_string_from_utf8()) != OK:
		print("JSON pannes invalide")
		_set_statut("‚ö†Ô∏è Format JSON invalide", Color.ORANGE)
		return
	
	var response = json.data
	var ids_pannes: Array[String] = []
	
	if response is Array:
		print("Nombre de pannes trouv√©es:", response.size())
		
		for item in response:
			if item is Dictionary and item.has("document"):
				var doc = item["document"]
				if doc is Dictionary:
					var name_path = str(doc.get("name", ""))
					var id_panne = name_path.split("/")[-1] if "/" in name_path else ""
					if id_panne != "":
						ids_pannes.append(id_panne)
	
	print("Pannes √† traiter:", ids_pannes)
	
	if ids_pannes.is_empty():
		_set_statut("‚úÖ OK", Color.GREEN)
		_set_resume("Aucune panne")
		update_repair_button_visibility()
		update_finish_button_visibility()
		return
	
	# R√©initialiser
	total_duree_restante = 0.0
	total_prix = 0
	pending_pannes.clear()
	pannes_repar√©es.clear()
	has_reparable_panne = false
	validation_en_cours = false
	panne_deja_payee = false
	
	_traiter_pannes_suivantes(ids_pannes, 0)

# ===============================
# Traitement s√©quentiel - CORRIG√â
# ===============================
func _traiter_pannes_suivantes(ids_pannes: Array[String], index: int):
	if index >= ids_pannes.size():
		print("=== FIN TRAITEMENT ===")
		print("panne_deja_payee = ", panne_deja_payee)
		print("has_reparable_panne = ", has_reparable_panne)
		print("total_prix = ", total_prix)
		print("pending_pannes.size() = ", pending_pannes.size())
		
		# LOGIQUE CORRIG√âE :
		if panne_deja_payee:
			# Une ou plusieurs pannes sont d√©j√† pay√©es
			if total_prix > 0:
				_set_statut("‚úÖ OK (d√©j√† pay√©)", Color.GREEN)
				_set_resume("Pay√© ‚Ä¢ " + str(total_prix) + " Ar")
			else:
				_set_statut("‚úÖ OK (d√©j√† pay√©)", Color.GREEN)
				_set_resume("D√©j√† pay√©")
		elif not has_reparable_panne and total_prix > 0:
			# Toutes r√©par√©es mais pas pay√©es
			_set_statut("R√©par√© mais non pay√©", Color.YELLOW)
			_set_resume(str(total_prix) + " Ar √† payer")
		elif not has_reparable_panne:
			# Aucune panne √† r√©parer
			_set_statut("‚úÖ OK", Color.GREEN)
			_set_resume("Aucune panne")
		else:
			# Pannes √† r√©parer
			_set_statut("‚ùå CASS√â", Color.RED)
			_set_resume("%ds ‚Ä¢ %d Ar" % [int(total_duree_restante), total_prix])
		
		# Boutons
		repair_button.visible = (not pending_pannes.is_empty() and not panne_deja_payee and has_reparable_panne)
		finish_button.visible = false
		progress_bar.visible = false
		
		return
	
	var id_panne_actuelle = ids_pannes[index]
	print("Traitement panne", index + 1, "/", ids_pannes.size(), ":", id_panne_actuelle)
	
	# V√©rifier paiement
	verifier_paiement_panne(id_panne_actuelle, func(est_payee: bool):
		if est_payee:
			panne_deja_payee = true
			print("Panne", id_panne_actuelle, "d√©j√† pay√©e")
			# M√™me si pay√©e, on doit charger son prix pour l'afficher
			_charger_prix_panne_payee(id_panne_actuelle, ids_pannes, index)
		else:
			_charger_details_panne(id_panne_actuelle, ids_pannes, index)
	)

# Nouvelle fonction pour charger le prix d'une panne d√©j√† pay√©e
func _charger_prix_panne_payee(id_panne: String, ids_pannes: Array[String], index: int):
	# Charger les d√©tails pour conna√Ætre le prix
	var query_details = {
		"idPanne": id_panne
	}
	
	var url = "https://garage-api-2-t50x.onrender.com/panneDetails"
	var json_str = JSON.stringify(query_details)
	var headers = PackedStringArray([
		"Content-Type: application/json",
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http.queue_free()
		
		if code == 200:
			var json = JSON.new()
			if json.parse(body.get_string_from_utf8()) == OK:
				var response_array = json.data as Array
				for item in response_array:
					if item is Dictionary and item.has("document"):
						var doc = item["document"]
						if doc is Dictionary:
							var fields = doc.get("fields", {})
							var id_type = str(fields.get("idPanneType", {}).get("stringValue", ""))
							if id_type != "":
								_charger_prix_type(id_type, id_panne, ids_pannes, index)
								return
		
		# Si erreur, passer √† la suivante
		_traiter_pannes_suivantes(ids_pannes, index + 1)
	)
	
	var err = http.request(url, headers, HTTPClient.METHOD_POST, json_str)
	if err != OK:
		_traiter_pannes_suivantes(ids_pannes, index + 1)

func _charger_prix_type(id_type: String, id_panne: String, ids_pannes: Array[String], index: int):
	var url = "https://garage-api-2-t50x.onrender.com/panneTypes/" + id_type
	var headers = PackedStringArray([
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http.queue_free()
		
		if code == 200:
			var json = JSON.new()
			if json.parse(body.get_string_from_utf8()) == OK:
				var doc_type = json.data
				if doc_type is Dictionary:
					var fields = doc_type.get("fields", {})
					var prix_raw = fields.get("prix", {})
					var prix = 0
					
					if prix_raw.has("doubleValue"):
						prix = int(prix_raw["doubleValue"])
					elif prix_raw.has("integerValue"):
						prix = int(prix_raw["integerValue"])
					elif prix_raw.has("stringValue"):
						var p_str = str(prix_raw["stringValue"])
						if p_str.is_valid_int():
							prix = int(p_str)
					
					total_prix += prix
					print("Panne pay√©e", id_panne, "‚Üí prix:", prix, " Ar (total:", total_prix, ")")
		
		_traiter_pannes_suivantes(ids_pannes, index + 1)
	)
	
	var err = http.request(url, headers, HTTPClient.METHOD_GET)
	if err != OK:
		_traiter_pannes_suivantes(ids_pannes, index + 1)

func _charger_details_panne(id_panne: String, ids_pannes: Array[String], index: int):
	var query_details = {
		"idPanne": id_panne
	}
	
	var url = "https://garage-api-2-t50x.onrender.com/panneDetails"
	var json_str = JSON.stringify(query_details)
	var headers = PackedStringArray([
		"Content-Type: application/json",
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http.queue_free()
		
		if code != 200:
			_traiter_pannes_suivantes(ids_pannes, index + 1)
			return
		
		var json = JSON.new()
		if json.parse(body.get_string_from_utf8()) != OK:
			_traiter_pannes_suivantes(ids_pannes, index + 1)
			return
		
		var response_array = json.data as Array
		var local_types: Array[String] = []
		
		for item in response_array:
			if item is Dictionary and item.has("document"):
				var doc = item["document"]
				if doc is Dictionary:
					var fields = doc.get("fields", {})
					var id_type = str(fields.get("idPanneType", {}).get("stringValue", ""))
					if id_type != "":
						local_types.append(id_type)
		
		if local_types.is_empty():
			_traiter_pannes_suivantes(ids_pannes, index + 1)
			return
		
		var local_completed: int = 0
		for id_type in local_types:
			_charger_un_type(id_type, id_panne, func():
				local_completed += 1
				if local_completed == local_types.size():
					_traiter_pannes_suivantes(ids_pannes, index + 1)
			)
	)
	
	var err = http.request(url, headers, HTTPClient.METHOD_POST, json_str)
	if err != OK:
		_traiter_pannes_suivantes(ids_pannes, index + 1)

func _charger_un_type(id_type: String, id_panne: String, on_complete: Callable):
	var url = "https://garage-api-2-t50x.onrender.com/panneTypes/" + id_type
	var headers = PackedStringArray([
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	var http_type = HTTPRequest.new()
	add_child(http_type)
	http_type.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http_type.queue_free()
		
		if code == 200:
			var json = JSON.new()
			if json.parse(body.get_string_from_utf8()) == OK:
				var doc_type = json.data
				if doc_type is Dictionary:
					var fields = doc_type.get("fields", {})
					
					var duree = float(fields.get("duree", {}).get("integerValue", 0))
					var prix_raw = fields.get("prix", {})
					var prix = 0
					
					if prix_raw.has("doubleValue"):
						prix = int(prix_raw["doubleValue"])
					elif prix_raw.has("integerValue"):
						prix = int(prix_raw["integerValue"])
					elif prix_raw.has("stringValue"):
						var p_str = str(prix_raw["stringValue"])
						if p_str.is_valid_int():
							prix = int(p_str)
					
					verifier_si_panne_a_reparer(id_panne, func(peut_reparer: bool):
						if peut_reparer:
							has_reparable_panne = true
							pending_pannes.append({"id_type": id_type, "duree": duree, "prix": prix, "id_panne": id_panne})
							total_duree_restante += duree
							total_prix += prix
							
							print("Panne √† r√©parer", id_panne, "‚Üí dur√©e:", duree, "s | prix:", prix, " Ar")
						else:
							print("Panne d√©j√† r√©par√©e", id_panne, "‚Üí prix:", prix, " Ar (sans dur√©e)")
							total_prix += prix
						
						on_complete.call()
					)
		else:
			on_complete.call()
	)
	
	var err = http_type.request(url, headers, HTTPClient.METHOD_GET)
	if err != OK:
		on_complete.call()
func verifier_si_panne_a_reparer(id_panne: String, callback: Callable) -> void:
	# Utiliser votre API au lieu de Firestore directement
	var url = "https://garage-api-2-t50x.onrender.com/pannes/" + id_panne + "/est-reparee"
	var headers = PackedStringArray([
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	print("V√©rification si panne est d√©j√† r√©par√©e via API:", id_panne)
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http.queue_free()
		
		var peut_reparer = true  # Par d√©faut, on peut r√©parer
		
		print("R√©ponse API est-repar√©e - Code:", code, " pour panne:", id_panne)
		
		if code == 200:
			var json = JSON.new()
			if json.parse(body.get_string_from_utf8()) == OK:
				var response = json.data
				if response is Dictionary and response.get("est_repar√©e", false):
					peut_reparer = false
					var raison = response.get("raison", "inconnue")
					print("‚Üí Panne", id_panne, "D√âJ√Ä", raison.uppercase(), " !")
				else:
					print("‚Üí Panne", id_panne, "PAS ENCORE R√âPAR√âE")
			else:
				print("Erreur parsing JSON, continuer comme si on pouvait r√©parer")
		else:
			print("Erreur HTTP", code, " - continuer comme si on pouvait r√©parer")
			if body.size() > 0:
				print("Message d'erreur:", body.get_string_from_utf8())
		
		callback.call(peut_reparer)
	)
	
	var err = http.request(url, headers, HTTPClient.METHOD_GET)
	if err != OK:
		print("Erreur lors de l'envoi de la requ√™te, continuer comme si on pouvait r√©parer")
		callback.call(true)
func verifier_paiement_panne(id_panne: String, callback: Callable):
	var url = "https://garage-api-2-t50x.onrender.com/pannes/" + id_panne + "/paiement"
	var headers = PackedStringArray([
		"Accept: application/json",
		"Accept-Encoding: identity"
	])
	
	var http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(func(_result, code: int, _headers, body: PackedByteArray):
		http.queue_free()
		
		var est_payee = false
		
		if code == 200:
			var json = JSON.new()
			if json.parse(body.get_string_from_utf8()) == OK:
				var response = json.data
				if response is Dictionary and response.get("paid", false):
					est_payee = true
		
		callback.call(est_payee)
	)
	
	var err = http.request(url, headers, HTTPClient.METHOD_GET)
	if err != OK:
		callback.call(false)

# ===============================
# Reste du code (inchang√©)
# ===============================
func _on_repair_button_pressed() -> void:
	if pending_pannes.is_empty() or is_repairing or panne_deja_payee:
		return
	
	repair_button.visible = false
	progress_bar.visible = true
	progress_bar.value = 0
	
	current_repair_index = 0
	_start_next_repair()

func _start_next_repair() -> void:
	if current_repair_index >= pending_pannes.size():
		is_repairing = false
		progress_bar.visible = false
		_set_statut("R√©parations termin√©es", Color.GREEN)
		update_repair_button_visibility()
		update_finish_button_visibility()
		return
	
	var panne = pending_pannes[current_repair_index]
	repair_duration = panne["duree"]
	current_repair_time = 0.0
	is_repairing = true
	print("R√©paration d√©marr√©e : ", repair_duration, " secondes")
func _process(delta: float) -> void:
	if not is_repairing:
		return
	
	current_repair_time += delta
	progress_bar.value = (current_repair_time / repair_duration) * 100
	
	if current_repair_time >= repair_duration:
		is_repairing = false
		progress_bar.visible = false
		
		total_duree_restante -= repair_duration
		var panne_repar√©e = pending_pannes[current_repair_index]
		pannes_repar√©es.append(panne_repar√©e.duplicate())
		pending_pannes.remove_at(current_repair_index)
		
		update_repair_button_visibility()
		_set_resume("%ds ‚Ä¢ %d Ar" % [int(total_duree_restante), total_prix])
		
		# CORRECTION : V√©rifier si TOUTES les r√©parations sont termin√©es
		if pending_pannes.is_empty():
			_set_statut("R√©parations termin√©es", Color.GREEN)
			print("=== TOUTES LES R√âPARATIONS TERMIN√âES ===")
			print("pannes_repar√©es:", pannes_repar√©es.size())
			print("is_in_finish_zone:", is_in_finish_zone)
			
			# Toujours mettre √† jour la visibilit√© du bouton
			update_finish_button_visibility()
		else:
			# Il reste encore des r√©parations
			print("=== R√âPARATION PARTIELLE TERMIN√âE ===")
			print("Reste", pending_pannes.size(), "pannes √† r√©parer")
			print("Temps restant:", total_duree_restante, "s")
			
			# Passer √† la panne suivante
			current_repair_index += 1
			if current_repair_index < pending_pannes.size():
				_start_next_repair()			
func _on_finish_button_pressed() -> void:
	if pannes_repar√©es.is_empty() or validation_en_cours:
		print("Aucune panne r√©par√©e √† valider ou validation d√©j√† en cours")
		_set_statut("Rien √† valider", Color.GRAY)
		finish_button.visible = false
		return
	
	print("=== D√âBUT VALIDATION ===")
	print("Nombre de pannes r√©par√©es √† valider : ", pannes_repar√©es.size())
	
	# √âviter les doublons
	var pannes_uniques = []
	var ids_deja_traites = {}
	
	for panne in pannes_repar√©es:
		var id_panne = panne["id_panne"]
		if not ids_deja_traites.has(id_panne):
			ids_deja_traites[id_panne] = true
			pannes_uniques.append(panne)
	
	print("Pannes uniques apr√®s d√©doublonnage : ", pannes_uniques.size())
	
	if pannes_uniques.is_empty():
		_finaliser_validation()
		return
	
	validation_en_cours = true
	requetes_validation_en_cours.clear()
	
	for panne in pannes_uniques:
		var id_panne = panne["id_panne"]
		print("‚Üí Tentative cr√©ation pour panne r√©par√©e : ", id_panne)
		
		var now = Time.get_datetime_dict_from_system(true)
		var timestamp_str = "%04d-%02d-%02dT%02d:%02d:%02dZ" % [
			now.year, now.month, now.day,
			now.hour, now.minute, now.second
		]
		
		# MODIFICATION : Pr√©parer le document au format que votre API attend
		var new_doc = {
			"fields": {
				"dateHeure": {"timestampValue": timestamp_str},
				"idPanne":   {"stringValue": id_panne},
				"idStatutForPanne": {"stringValue": "2"}
			}
		}
		
		var json_str = JSON.stringify(new_doc)
		
		# MODIFICATION : Utiliser votre API Flask au lieu de Firestore direct
		var url = "https://garage-api-2-t50x.onrender.com/panneStatuts"
		var headers = PackedStringArray(["Content-Type: application/json"])
		
		var http = HTTPRequest.new()
		add_child(http)
		requetes_validation_en_cours.append(http)
		
		# Utiliser une closure qui capture les variables correctement
		http.request_completed.connect(func(_result, code, _headers, body, http_node = http, panne_id = id_panne):
			print("R√©ponse HTTP pour ", panne_id, " code = ", code)
			
			if code >= 200 and code < 300:
				print("‚Üí SUCC√àS pour ", panne_id)
			else:
				print("‚Üí √âCHEC pour ", panne_id, " ‚Üí code ", code)
				if body.size() > 0:
					print("Message d'erreur:", body.get_string_from_utf8())
			
			# Retirer la requ√™te de la liste
			if http_node in requetes_validation_en_cours:
				requetes_validation_en_cours.erase(http_node)
			http_node.queue_free()
			
			# Si plus de requ√™tes en cours, finaliser
			if requetes_validation_en_cours.is_empty():
				print("Toutes les requ√™tes de validation sont termin√©es")
				validation_en_cours = false
				_finaliser_validation()
		)
		
		var err = http.request(url, headers, HTTPClient.METHOD_POST, json_str)
		if err != OK:
			print("Erreur Godot HTTPRequest : ", err)
			if http in requetes_validation_en_cours:
				requetes_validation_en_cours.erase(http)
			http.queue_free()
			
			if requetes_validation_en_cours.is_empty():
				validation_en_cours = false
				_finaliser_validation()
	
	finish_button.visible = false
	_set_statut("Validation en cours...", Color.YELLOW)

func _finaliser_validation():
	print("=== FINALISATION VALIDATION ===")
	_set_statut("‚úÖ R√©par√© et valid√©", Color.GREEN)
	
	# R√©initialiser pour √©viter de re-valider les m√™mes pannes
	pannes_repar√©es.clear()
	pending_pannes.clear()
	total_duree_restante = 0.0
	total_prix = 0
	has_reparable_panne = false
	validation_en_cours = false
	requetes_validation_en_cours.clear()
	update_repair_button_visibility()
	update_finish_button_visibility()

func update_repair_button_visibility() -> void:
	if repair_button:
		repair_button.visible = (not pending_pannes.is_empty() and not panne_deja_payee and has_reparable_panne)

func update_finish_button_visibility() -> void:
	if not is_instance_valid(finish_button):
		print("‚ùå finish_button n'est pas valide!")
		return
	
	print("=== update_finish_button_visibility() ===")
	print("is_in_finish_zone =", is_in_finish_zone)
	print("pending_pannes.size() =", pending_pannes.size())
	print("total_duree_restante =", total_duree_restante)
	print("pannes_repar√©es.size() =", pannes_repar√©es.size())
	print("panne_deja_payee =", panne_deja_payee)
	
	# LOGIQUE CORRIG√âE :
	# Le bouton Finir appara√Æt quand :
	# 1. La voiture est dans la zone de finition
	# 2. Toutes les r√©parations sont termin√©es (plus de pannes en attente)
	# 3. Plus de temps de r√©paration restant
	# 4. Il y a des pannes r√©par√©es √† valider
	# 5. La voiture n'est pas d√©j√† pay√©e
	
	var should_show = false
	
	if is_in_finish_zone:
		print("‚úì Dans la zone de finition")
		
		if pending_pannes.is_empty():
			print("‚úì Aucune panne en attente")
			
			if total_duree_restante <= 0:
				print("‚úì Pas de temps de r√©paration restant")
				
				if pannes_repar√©es.size() > 0:
					print("‚úì Il y a", pannes_repar√©es.size(), "pannes r√©par√©es √† valider")
					
					if not panne_deja_payee:
						print("‚úì Pas d√©j√† pay√©")
						should_show = true
						print("‚Üí TOUTES LES CONDITIONS SONT REMPLIES !")
					else:
						print("‚úó D√©j√† pay√©, pas besoin de bouton")
				else:
					print("‚úó Aucune panne r√©par√©e √† valider")
			else:
				print("‚úó Temps de r√©paration restant:", total_duree_restante)
		else:
			print("‚úó Pannes en attente:", pending_pannes.size())
	else:
		print("‚úó Pas dans la zone de finition")
	
	print("  should_show =", should_show)
	print("================================")
	
	finish_button.visible = should_show
	finish_button.disabled = !should_show
	
	# Debug suppl√©mentaire
	if should_show:
		print("üéØ BOUTON FINIR DOIT √äTRE VISIBLE !")
		print("Position du bouton:", finish_button.global_position)
		print("Taille du bouton:", finish_button.size)

func _set_statut(text: String, col: Color):
	if label_statut:
		label_statut.text = text
		label_statut.modulate = col
		print("STATUT MIS √Ä JOUR : ", text)
	
	if sprite:
		sprite.modulate = Color.WHITE

func _set_resume(text: String):
	if label_resume:
		label_resume.text = text
		print("R√âSUM√â MIS √Ä JOUR : ", text)

func afficher_erreur(msg: String):
	_set_statut("‚ö†Ô∏è " + msg, Color.ORANGE)
	print("ERREUR : ", msg)

func montrer_bouton_finir():
	print("üéØ MONTRE BOUTON FINIR APPEL√â !")
	print("  Nom de cette voiture:", name)
	print("  Chemin:", get_path())
	
	is_in_finish_zone = true
	print("  is_in_finish_zone =", is_in_finish_zone)
	
	# Forcer l'update IMM√âDIATEMENT
	update_finish_button_visibility()

func cacher_bouton_finir():
	print("üéØ CACHE BOUTON FINIR APPEL√â !")
	
	is_in_finish_zone = false
	print("  is_in_finish_zone =", is_in_finish_zone)
	
	# Forcer l'update IMM√âDIATEMENT
	update_finish_button_visibility()
